unpackaged/main/default/objects/clazar__CoSellOpportunity__c/clazar__CoSellOpportunity__c.object-meta.xml
<CustomObject>
    <label>Clazar Co-Sell Opportunity</label>
    <nameField>
        <label>Cloud Id</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Clazar Co-Sell Opportunities</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>