unpackaged/main/default/objects/clazar__CoSellOpportunity__c/fields/clazar__accept_by__c.field-meta.xml
<CustomField>
    <fullName>clazar__accept_by__c</fullName>
    <label>Accept By</label>
    <type>DateTime</type>
</CustomField>