unpackaged/main/default/objects/clazar__CoSellOpportunity__c/fields/clazar__customer_website__c.field-meta.xml
<CustomField>
    <fullName>clazar__customer_website__c</fullName>
    <label>Customer Website</label>
    <length>255</length>
    <type>Text</type>
</CustomField>