unpackaged/main/default/objects/clazar__CoSellOpportunity__c/fields/clazar__last_modified_at__c.field-meta.xml
<CustomField>
    <fullName>clazar__last_modified_at__c</fullName>
    <label>Last Modified At</label>
    <type>DateTime</type>
</CustomField>