unpackaged/main/default/objects/clazar__CoSellOpportunity__c/fields/clazar__published_at__c.field-meta.xml
<CustomField>
    <fullName>clazar__published_at__c</fullName>
    <label>Published At</label>
    <type>DateTime</type>
</CustomField>