unpackaged/main/default/objects/clazar__CoSellOpportunity__c/fields/clazar__stage__c.field-meta.xml
<CustomField>
    <fullName>clazar__stage__c</fullName>
    <label>Stage</label>
    <length>120</length>
    <type>Text</type>
</CustomField>