unpackaged/main/default/objects/clazar__CoSellOpportunity__c/fields/clazar__title__c.field-meta.xml
<CustomField>
    <fullName>clazar__title__c</fullName>
    <label>Title</label>
    <length>255</length>
    <type>Text</type>
</CustomField>