unpackaged/main/default/objects/clazar__CoSellOpportunity__c/fields/clazar__type__c.field-meta.xml
<CustomField>
    <fullName>clazar__type__c</fullName>
    <label>Type</label>
    <length>120</length>
    <type>Text</type>
</CustomField>