unpackaged/main/default/objects/clazar__CoSellOpportunity__c/listViews/clazar__All.listView-meta.xml
<ListView>
    <fullName>clazar__All</fullName>
    <columns>NAME</columns>
    <columns>clazar__title__c</columns>
    <columns>clazar__cloud__c</columns>
    <columns>clazar__status__c</columns>
    <columns>clazar__stage__c</columns>
    <columns>clazar__customer_company__c</columns>
    <columns>clazar__target_close_date__c</columns>
    <columns>LAST_UPDATE</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>