unpackaged/main/default/objects/clazar__CoSellOpportunity__c/listViews/clazar__Azure_Co_Sell_Opportunities.listView-meta.xml
<ListView>
    <fullName>clazar__Azure_Co_Sell_Opportunities</fullName>
    <columns>NAME</columns>
    <columns>clazar__title__c</columns>
    <columns>clazar__cloud__c</columns>
    <columns>clazar__status__c</columns>
    <columns>clazar__customer_company__c</columns>
    <columns>LAST_UPDATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>clazar__cloud__c</field>
        <operation>equals</operation>
        <value>azure</value>
    </filters>
    <label>Azure Co-Sell Opportunities</label>
</ListView>